[#378] fixed error caused by whitespace

--- a/client/views/discover/ed-discover-view.less
+++ b/client/views/discover/ed-discover-view.less
@@ -24,7 +24,7 @@
       .edType(heading-XS);
       color: @originalTeal;
       text-transform: uppercase;
-      padding: 6rem 0 1.8rem 2rem;
+      padding: 3.5rem 0 1.8rem 2rem;
       &:active, &:hover, &:focus {
         background-color: @darkPurple3;
       }
