--- a/client/views/settings/ed-settings-view.less
+++ b/client/views/settings/ed-settings-view.less
@@ -31,8 +31,9 @@
         background-color: @darkPurple3;
       }
       span {
-        float: right;
-        margin-right: 4rem;
+        color: @originalTeal;
+        //padding-right: 4rem;
+        //float: right;
       }
     }
   }
